--- a/src/components/layout/layout.less
+++ b/src/components/layout/layout.less
@@ -1,5 +1,19 @@
-.Layout {
+.PageHeader {
+	width: 100%;
+	height: 36px;
+	background: #111731;
+}
+
+.PageBody {
 	width: 100%;
 	height: 100%;
 	display: flex;
+}
+
+.Layout {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	overflow: hidden;
 }
