--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,6 @@
 body {
   height: 100%;
+  width: 100%;
   display: flex;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
