refator: Moved around files and refactored the entry point and some modules.

--- a/src/common/ant-override.less
+++ b/src/common/ant-override.less
@@ -14,6 +14,8 @@
 @tabs-card-head-background: @primary-tint-6;
 @tabs-card-gutter: 0px;
 
+@tree-bg: @primary-tint-5;
+
 @border-radius-base: 0;
 @border-color-base: @primary-tint-6;
 @border-color-inverse: @primary-tint-6;
