--- a/src/common/variables.less
+++ b/src/common/variables.less
@@ -2,6 +2,7 @@
 @primary-tint-2: #BCCCEC;
 @primary-tint-3: #8A9DC7;
 @primary-tint-4: #58688F;
+@primary-tint-5: #18203B;
 @primary-tint-6: #111731;
 @primary-tint-7: #0A1028;
 @primary-tint-8: #060a21;
