--- a/src/components/browser/browser.less
+++ b/src/components/browser/browser.less
@@ -1,6 +1,8 @@
+@import "../../common/variables.less";
+
 .Browser {
 	width: 100%;
 	min-width: 1232px;
 	height: 100%;
-	background-color: #060a21;
+	background-color: @primary-tint-8;
 }
