--- a/src/App.less
+++ b/src/App.less
@@ -1,10 +1,9 @@
-
-@import "antd/dist/antd.less";
-@import "ant-override.less";
+@import "common/variables.less";
 
 .App {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	color: #dce5f5;
+	flex-direction: column;
+	color: @primary-tint-1;
 }
