--- a/src/components/explorer/explorer.less
+++ b/src/components/explorer/explorer.less
@@ -1,5 +1,7 @@
+@import "../../common/variables.less";
+
 .Explorer {
 	min-width: 160px;
 	height: 100%;
-	background-color: #18203b;
+	background-color: @primary-tint-5;
 }
