--- a/src/components/layout/layout.less
+++ b/src/components/layout/layout.less
@@ -1,8 +1,17 @@
+@import "../../common/variables.less";
+
 .PageHeader {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
 	width: 100%;
 	height: 36px;
-	background: #111731;
+	background: @primary-tint-6;
 	-webkit-app-region: drag;
+}
+
+.PageHeaderLogo {
+	padding: 8px;
 }
 
 .PageBody {
@@ -11,10 +20,8 @@
 	display: flex;
 }
 
-.Layout {
-	display: flex;
+.PageBodyEmptyState {
 	width: 100%;
 	height: 100%;
-	flex-direction: column;
-	overflow: hidden;
+	background: @primary-tint-5;
 }
