--- a/src/index.less
+++ b/src/index.less
@@ -1,12 +1,12 @@
+@import "antd/dist/antd.less";
+@import "common/ant-override.less";
 
 body {
   height: 100%;
   width: 100%;
   display: flex;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: @font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
