feat(Shell): Shell header and multi host list support.

--- a/src/common/ant-override.less
+++ b/src/common/ant-override.less
@@ -1,6 +1,6 @@
 @import "./variables.less";
 
-@font-family: 'Inter', sans-serif;
+@font-family: "Inter", sans-serif;
 
 @primary-color: @primary-tint-1;
 @text-color: @primary-tint-2;
@@ -13,6 +13,7 @@
 @tabs-card-active-color: @primary-tint-8;
 @tabs-card-head-background: @primary-tint-6;
 @tabs-card-gutter: 0px;
+@tabs-bar-margin: 0;
 
 @tree-bg: @primary-tint-5;
 
