--- a/src/components/shell/shell.less
+++ b/src/components/shell/shell.less
@@ -13,3 +13,24 @@
 .ant-tabs-content {
 	height: 100%;
 }
+
+.ShellHeader {
+	display: flex;
+	margin: 4px 0 4px 0;
+	width: 100%;
+	height: 3.33%;
+}
+
+.ShellHeaderItem {
+	height: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 0px 8px 0px 8px;
+	span {
+		display: flex;
+		align-items: center;
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+}
