feat: Refactored app layout.

--- a/src/components/explorer/explorer.less
+++ b/src/components/explorer/explorer.less
@@ -3,5 +3,21 @@
 .Explorer {
 	min-width: 160px;
 	height: 100%;
-	background-color: @primary-tint-5;
+	background-color: @primary;
+	display: flex;
+	flex-direction: column;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.ExplorerHeader {
+	padding: 10px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 17px;
+	letter-spacing: 0em;
+	text-align: left;
 }
