--- a/src/components/sidebar/sidebar.less
+++ b/src/components/sidebar/sidebar.less
@@ -5,6 +5,6 @@
 	min-width: 48px;
 	max-width: 48px;
 	height: 100%;
-	overflow: hidden;
-	background-color: @primary-tint-7;
+	background: @primary;
+	border-right: white 1px solid;
 }
