--- a/src/common/variables.less
+++ b/src/common/variables.less
@@ -1,10 +1,10 @@
-@primary-tint-1: #DCE5F5;
-@primary-tint-2: #BCCCEC;
-@primary-tint-3: #8A9DC7;
-@primary-tint-4: #58688F;
-@primary-tint-5: #18203B;
+@primary-tint-1: #dce5f5;
+@primary-tint-2: #bcccec;
+@primary-tint-3: #8a9dc7;
+@primary-tint-4: #58688f;
+@primary-tint-5: #18203b;
 @primary-tint-6: #111731;
-@primary-tint-7: #0A1028;
+@primary-tint-7: #0a1028;
 @primary-tint-8: #060a21;
 
-@primary: #18203B;
+@primary: #222b45;
