feat(editor): Working shell execution with JSONViewer.

--- a/src/index.less
+++ b/src/index.less
@@ -24,3 +24,14 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+pre {
+	width: 100%;
+	margin: revert;
+	overflow: auto;
+	overflow-y: hidden;
+	font-size: 12px;
+	line-height: 20px;
+	border: 1px solid #777;
+	background: transparent repeat 0 0;
+}
