--- a/src/components/sidebar/sidebar.less
+++ b/src/components/sidebar/sidebar.less
@@ -7,4 +7,13 @@
 	height: 100%;
 	background: @primary;
 	border-right: white 1px solid;
+	display: "flex";
+	flex-direction: "column";
+}
+
+.SidebarSection {
+	padding: 10px;
+	text-align: center;
+	width: 100%;
+	height: 50px;
 }
