feat: edit and clone setup

--- a/src/components/panes/panes.less
+++ b/src/components/panes/panes.less
@@ -31,10 +31,17 @@
 }
 
 .HeaderWrapper {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
 	padding: 20px 20px;
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 400;
 	text-align: center;
+}
+
+.AdvancedFormHeader {
+	cursor: pointer;
 }
 
 .Form {
@@ -55,6 +62,10 @@
 
 .Input input {
 	background: #fff;
+}
+
+.Gap {
+	gap: 20px;
 }
 
 .ButtonGroup {
