feat: button to create a new connection

--- a/src/components/connectionManager/connectionManager.less
+++ b/src/components/connectionManager/connectionManager.less
@@ -6,8 +6,8 @@
 	background-color: @primary;
 	display: flex;
 	flex-direction: column;
-	padding-top: 10px;
 	padding-bottom: 10px;
+	gap: 20px;
 }
 
 .Container {
@@ -43,4 +43,8 @@
 
 .FlexFill {
 	flex-grow: 1;
+}
+
+.Header {
+	font-size: 20px;
 }
