fix(Sidebar): Issue where ConnectionManager does not close on connection.

--- a/src/components/panes/panes.less
+++ b/src/components/panes/panes.less
@@ -5,7 +5,10 @@
 }
 
 .ResultViewerContainer {
-	height: 50%;
+	height: 100%;
+	width: 100%;
+	overflow-y: auto;
+	padding: 12px;
 }
 
 .UriContainer {
