--- a/src/components/panes/panes.less
+++ b/src/components/panes/panes.less
@@ -119,3 +119,24 @@
 	align-items: center;
 	cursor: pointer;
 }
+
+.EditorHeader {
+	display: flex;
+	margin: 4px 0 4px 0;
+	width: 100%;
+	height: 3.33%;
+}
+
+.EditorHeaderItem {
+	height: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 0px 8px 0px 8px;
+	span {
+		display: flex;
+		align-items: center;
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+}
