refactor(react): Restructure of components * Moved state and markup out of shell into editor. * Hotkeys * Some bug fixes

--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,5 @@
 @import "antd/dist/antd.less";
-@import "common/ant-override.less";
+@import "common/styles/ant-override.less";
 
 html {
 	overflow: hidden;
