feat(common): Button with promise based onClick

--- a/src/common/styles/ant-override.less
+++ b/src/common/styles/ant-override.less
@@ -21,3 +21,5 @@
 @border-color-base: @primary-tint-6;
 @border-color-inverse: @primary-tint-6;
 @border-color-split: @primary-tint-6;
+
+@popover-bg: @primary-tint-4;
