--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -8,3 +8,8 @@
 @primary-tint-8: #060a21;
 
 @primary: #222b45;
+
+@success: #16825d;
+@success-tint-1: #199c6e;
+@danger: #d02029;
+@danger-tint-1: #e0212a;
