feat(exports): dialog for options and types

--- a/src/components/shell/styles.less
+++ b/src/components/shell/styles.less
@@ -15,3 +15,14 @@
 .ant-tabs-content {
 	height: 100%;
 }
+
+.export-options {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.export-suboptions {
+	display: flex;
+	gap: 20px;
+}
