--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -4,7 +4,7 @@
 	height: 100%;
 }
 
-.ResultViewerContainer {
+.resultviewer-container {
 	height: 100%;
 	width: 100%;
 	overflow-y: auto;
@@ -107,11 +107,6 @@
 
 .AdvancedButton > * {
 	cursor: pointer;
-}
-
-.InlineInput {
-	display: flex;
-	gap: 20px;
 }
 
 .BackContainer {
