Editor changes. See description of commit.
BREAKING CHANGES:
* Disk and memory store changes to be generic
* The shell now depends on driverConnectionId for data internally
* StoredConnection `members` property renamed to `host`.

feat: Improvements to editor
* mongosh data types introduced to monaco intellisense
* Utils introduced in react. Copied over from electron utils
* Editor can now switch between replica set nodes. Evaluation still seems to be happening on primary. Bug needs to be resolved.
* Sidebar markup and style modifications
* Use mongo-uri package to parse mongo uris correctly.

--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -11,9 +11,18 @@
 	flex-direction: "column";
 }
 
-.SidebarSection {
-	padding: 10px;
+.SidebarItem {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
 	width: 100%;
 	height: 50px;
+	border-bottom: @primary-tint-4 1px solid;
+}
+
+.SidebarHome {
+}
+
+.SidebarConnection {
 }
