--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -42,3 +42,15 @@
 		background: @danger-tint-1;
 	}
 }
+
+.button-text-size-small {
+	font-size: 12px;
+}
+
+.button-text-size-medium {
+	font-size: 14px;
+}
+
+.button-text-size-large {
+	font-size: 16px;
+}
