--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -14,6 +14,11 @@
 	padding: 8px;
 }
 
+.PageHeaderItem {
+	-webkit-app-region: no-drag;
+	padding: 4px;
+}
+
 .PageBody {
 	width: 100%;
 	height: 100%;
