--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,6 @@
 @import "common/styles/variables.less";
+@import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/icons/lib/css/blueprint-icons.css";
 
 .App {
 	width: 100%;
