--- a/src/components/panes/editor/ResultViewer/styles.less
+++ b/src/components/panes/editor/ResultViewer/styles.less
@@ -1,6 +1,16 @@
 .ResultViewer {
-	height: 75%;
+	display: flex;
+	flex-direction: column;
+}
+.TreeViewer {
+	display: flex;
+	flex-direction: column;
+}
+.TreeViewerContent {
+	overflow-y: scroll;
 }
 .JSONViewer {
+	display: flex;
+	flex-direction: column;
 	white-space: pre-wrap;
 }
