--- a/src/components/browser/styles.less
+++ b/src/components/browser/styles.less
@@ -1,8 +1,12 @@
 @import "../../common/styles/variables.less";
 
 .Browser {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-grow: 1;
+	min-width: 0;
 	width: 100%;
-	min-width: 1232px;
 	height: 100%;
 	background-color: @primary-tint-8;
 }
