--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,5 @@
 @import "common/styles/variables.less";
+@import "@blueprintjs/popover2/lib/css/blueprint-popover2.css";
 @import "@blueprintjs/core/lib/css/blueprint.css";
 @import "@blueprintjs/icons/lib/css/blueprint-icons.css";
 
