--- a/src/components/panes/editor/ResultViewer/styles.less
+++ b/src/components/panes/editor/ResultViewer/styles.less
@@ -1,45 +1,77 @@
-.ResultViewer {
+@import "../../../../common/styles/variables.less";
+
+.result-viewer {
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
 	min-height: 0;
-}
-.ResultViewerHeader {
-	display: flex;
-	justify-content: flex-end;
-	flex-grow: 1;
-	min-height: 40px;
-	padding: 8px;
-}
-.ResultViewerContainer {
-	display: flex;
-	min-height: 0;
-	width: 100%;
-	height: calc(100% - 40px);
-	padding: 4px;
-}
-.TreeViewer {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	min-height: 0;
-}
-.TreeViewerHeader {
-	height: 30px;
-}
-.TreeViewerContent {
-	overflow-y: scroll;
-	display: flex;
-	flex-direction: column;
-	flex-grow: 0;
-	min-height: calc(100% - 30px);
-}
-.JSONViewer {
-	overflow-y: scroll;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	flex-grow: 0;
-	min-height: 0;
-	white-space: pre-wrap;
+
+	.header {
+		display: flex;
+		justify-content: flex-end;
+		flex-grow: 1;
+		min-height: 40px;
+		padding: 8px;
+
+		.button {
+			padding: 4px;
+		}
+	}
+	.container {
+		display: flex;
+		min-height: 0;
+		width: 100%;
+		height: calc(100% - 40px);
+		padding: 4px;
+	}
+
+	.tree-viewer {
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
+		min-height: 0;
+
+		.header {
+			height: 38px;
+		}
+
+		.content {
+			overflow-y: scroll;
+			overflow-x: hidden;
+			display: flex;
+			flex-direction: column;
+			flex-grow: 0;
+			min-height: calc(100% - 30px);
+
+			.document-header-buttons {
+				display: flex;
+				* {
+					padding: 4px;
+				}
+			}
+		}
+
+		.content-row {
+			display: flex;
+
+			.left {
+				width: 50%;
+			}
+
+			.right {
+				width: 50%;
+			}
+		}
+	}
+
+	.json-viewer {
+		overflow-y: scroll;
+		overflow-x: hidden;
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		flex-grow: 0;
+		min-height: 0;
+		white-space: pre-wrap;
+	}
 }
