--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -2,12 +2,17 @@
 
 .PageHeader {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	flex-direction: row;
 	width: 100%;
 	height: 36px;
 	background: @primary-tint-6;
-	-webkit-app-region: drag;
+}
+
+.PageHeaderComponent {
+	display: flex;
+	flex-direction: row;
 }
 
 .PageHeaderLogo {
