feat(ConnectionManager): Removed antd

--- a/src/components/connection-manager/styles.less
+++ b/src/components/connection-manager/styles.less
@@ -54,6 +54,12 @@
 	flex-grow: 1;
 }
 
+.FlexAbsoluteCenter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .Header {
 	font-size: 20px;
 }
