feat(Editor & TreeViewer): Disabling edits and updates preview before saving

--- a/src/components/panes/editor/ResultViewer/styles.less
+++ b/src/components/panes/editor/ResultViewer/styles.less
@@ -1,5 +1,14 @@
 @import "../../../../common/styles/variables.less";
 
+.updates-list {
+	overflow: auto;
+	max-height: 250px;
+
+	.item {
+		margin-top: 8px;
+	}
+}
+
 .result-viewer {
 	display: flex;
 	flex-direction: column;
