--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -1,6 +1,20 @@
 @import "../../common/styles/variables.less";
 
-.PageHeader {
+.layout {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	width: 100%;
+}
+
+.page-content {
+	width: 100%;
+	display: flex;
+	flex-grow: 1;
+	min-height: 0;
+}
+
+.title-bar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -8,31 +22,18 @@
 	width: 100%;
 	height: 36px;
 	background: @primary-tint-6;
-}
 
-.PageHeaderComponent {
-	display: flex;
-	flex-direction: row;
-}
+	.header-container {
+		display: flex;
+		flex-direction: row;
+	}
 
-.PageHeaderLogo {
-	padding: 8px;
-}
+	.header-item {
+		-webkit-app-region: no-drag;
+		padding: 4px;
+	}
 
-.PageHeaderItem {
-	-webkit-app-region: no-drag;
-	padding: 4px;
-}
-
-.PageBody {
-	width: 100%;
-	flex-grow: 1;
-	min-height: 0;
-	display: flex;
-}
-
-.PageBodyEmptyState {
-	width: 100%;
-	height: 100%;
-	background: @primary;
+	.logo {
+		padding: 8px;
+	}
 }
