feat: Removed colors

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -13,17 +13,17 @@
 }
 
 .button-primary {
-	background: @primary-tint-8;
-	color: @primary-tint-1;
+	// background: @primary-tint-8;
+	// color: @primary-tint-1;
 }
 
 .button-secondary {
-	background: @primary-tint-4;
-	color: @primary-tint-7;
+	// background: @primary-tint-4;
+	// color: @primary-tint-7;
 
 	&:hover {
-		background: @primary-tint-3;
-		color: @primary-tint-6;
+		// background: @primary-tint-3;
+		// color: @primary-tint-6;
 	}
 }
 
