--- a/src/components/connection-controller/styles.less
+++ b/src/components/connection-controller/styles.less
@@ -3,7 +3,7 @@
 .ConnectionManager {
 	min-width: 160px;
 	height: 100%;
-	background-color: @primary;
+	// background-color: @primary;
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 10px;
@@ -68,7 +68,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	flex-direction: row;
-	background: @primary-tint-8;
+	// background: @primary-tint-8;
 	align-items: center;
 	gap: 4px;
 	padding: 12px;
@@ -79,7 +79,7 @@
 }
 
 .CellInfoTitle {
-	color: @primary-tint-2;
+	// color: @primary-tint-2;
 	font-size: 13px;
 }
 
