--- a/src/common/components/CollapseList.less
+++ b/src/common/components/CollapseList.less
@@ -5,8 +5,8 @@
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	background-color: @primary-tint-6;
-	color: @primary-tint-1;
+	// background-color: @primary-tint-6;
+	// color: @primary-tint-1;
 
 	.item {
 		cursor: pointer;
@@ -17,10 +17,10 @@
 		height: 38px;
 		margin-left: 1px;
 		padding: 4px 8px;
-		background-color: @primary-tint-3;
+		// background-color: @primary-tint-3;
 
 		&.primary {
-			background-color: @primary-tint-4;
+			// background-color: @primary-tint-4;
 		}
 
 		.heading {
