--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -21,7 +21,7 @@
 	flex-direction: row;
 	width: 100%;
 	height: 36px;
-	background: @primary-tint-6;
+	// background: @primary-tint-6;
 
 	.header-container {
 		display: flex;
