--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -24,7 +24,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 60%;
-	background: @primary-tint-5;
+	// background: @primary-tint-5;
 	border: 20px solid @primary-tint-6;
 }
 
