--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -5,7 +5,7 @@
 	min-width: 48px;
 	max-width: 48px;
 	height: 100%;
-	background: @primary;
+	// background: @primary;
 	border-right: white 1px solid;
 	display: "flex";
 	flex-direction: "column";
