--- a/src/index.less
+++ b/src/index.less
@@ -11,7 +11,7 @@ body {
 	width: 100%;
 	display: flex;
 	margin: 0;
-	font-family: @font-family;
+	// font-family: @font-family;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
