feat(ConnectionForm): Dropdown button changes

--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -16,6 +16,8 @@
 	height: 100%;
 	display: flex;
 	justify-content: center;
+	background-color: @container-bg-color;
+	color: @text-color;
 
 	@container-width: 75%;
 	@container-height: 75%;
