--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -12,19 +12,27 @@
 	padding: 3px;
 }
 
+.button-none {
+	color: @text-color;
+}
+
 .button-primary {
-	// background: @primary-tint-8;
-	// color: @primary-tint-1;
+	background: @primary-tint-6;
+	color: @text-color;
 }
 
 .button-secondary {
-	// background: @primary-tint-4;
-	// color: @primary-tint-7;
+	background: @primary-tint-4;
+	color: @text-color;
 
 	&:hover {
 		// background: @primary-tint-3;
 		// color: @primary-tint-6;
 	}
+}
+
+.button-link {
+	color: @text-color !important;
 }
 
 .button-success {
