--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -7,7 +7,10 @@
 @primary-tint-7: #0a1028;
 @primary-tint-8: #060a21;
 
-@primary: #222b45;
+@text-color: @primary-tint-1;
+@subtext-color: @primary-tint-2;
+
+@container-bg-color: @primary-tint-6;
 
 @success: #16825d;
 @success-tint-1: #199c6e;
