feat(TitleBar): Color changes

--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -20,8 +20,9 @@
 	align-items: center;
 	flex-direction: row;
 	width: 100%;
-	height: 36px;
-	// background: @primary-tint-6;
+	height: 35px;
+	background: @container-bg-color;
+	color: @text-color;
 
 	.header-container {
 		display: flex;
