feat(ConnectionForm): styling changes for icon and reset form on save

--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -88,8 +88,8 @@
 			align-self: flex-start;
 		}
 
-		.input-field > * {
-			width: 100%;
+		.input-field {
+			flex-grow: 1;
 		}
 
 		.button-group {
