feat(Browser): Better tabs * framer-motion * Removed antd related browser and tabs stuff

--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -11,6 +11,8 @@
 @subtext-color: @primary-tint-2;
 
 @container-bg-color: @primary-tint-6;
+@container-fg-color: @primary-tint-7;
+@outline-color: @primary-tint-7;
 
 @success: #16825d;
 @success-tint-1: #199c6e;
