--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -14,6 +14,7 @@
 
 .uri-container {
 	height: 100%;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	background-color: @container-bg-color;
@@ -89,7 +90,7 @@
 		}
 
 		.input-field {
-			* {
+			textarea {
 				width: 100%;
 			}
 			flex-grow: 1;
