feat: box-shadows and tab style changes

--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -10,9 +10,11 @@
 @text-color: @primary-tint-1;
 @subtext-color: @primary-tint-2;
 
-@container-bg-color: @primary-tint-6;
-@container-fg-color: @primary-tint-7;
-@outline-color: @primary-tint-7;
+@container-bg-color: @primary-tint-7;
+@container-fg-color: @primary-tint-6;
+@outline-color: @primary-tint-8;
+@shadow-color: black;
+@box-shadow: 0px 3px 4px @shadow-color;
 
 @success: #16825d;
 @success-tint-1: #199c6e;
