--- a/src/components/explorer/styles.less
+++ b/src/components/explorer/styles.less
@@ -29,7 +29,7 @@
 	background-clip: padding-box;
 	background-color: #fff;
 	border-radius: 4px;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+	box-shadow: @box-shadow;
 	left: 0px;
 	list-style-type: none;
 	margin: 0;
@@ -39,7 +39,7 @@
 	text-align: left;
 	top: 0px;
 	overflow: hidden;
-	-webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: @box-shadow;
 }
 
 .ContextMenu li {
