--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -17,7 +17,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	background-color: @container-bg-color;
+	background-color: @container-fg-color;
 	color: @text-color;
 
 	@container-width: 75%;
