--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -6,7 +6,7 @@
 	max-width: 48px;
 	height: 100%;
 	background: @container-bg-color;
-	border-right: white 1px solid;
+	box-shadow: @box-shadow;
 	display: "flex";
 	flex-direction: "column";
 
