feat: Custom scrollbar

--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -16,6 +16,9 @@
 @shadow-color: black;
 @box-shadow: 0px 3px 4px @shadow-color;
 
+@scrollbar-bg-color: @container-fg-color;
+@scrollbar-thumb-color: @primary-tint-4;
+
 @success: #16825d;
 @success-tint-1: #199c6e;
 @danger: #d02029;
