feat(Editor): Design changes

--- a/src/components/browser/styles.less
+++ b/src/components/browser/styles.less
@@ -21,6 +21,7 @@
 			display: flex;
 			justify-content: start;
 			align-items: end;
+			min-height: 36px;
 			overflow-x: auto;
 			background-color: @container-bg-color;
 		}
