--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -1,13 +1,5 @@
 @import "../../common/styles/variables.less";
 
-.Editor {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	min-height: 0;
-	height: 100%;
-}
-
 .resultviewer-container {
 	padding: 12px;
 }
@@ -146,23 +138,27 @@
 	cursor: pointer;
 }
 
-.EditorHeader {
+.editor {
 	display: flex;
-	margin: 4px 0 4px 0;
-	width: 100%;
-	height: 25px;
-}
-
-.EditorHeaderItem {
+	flex-direction: column;
+	flex-grow: 1;
+	min-height: 0;
 	height: 100%;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	margin: 0px 8px 0px 8px;
-	span {
+
+	color: @text-color;
+
+	.editor-header {
 		display: flex;
-		align-items: center;
-		padding-left: 8px;
-		padding-right: 8px;
+		flex-grow: 1;
+		width: 100%;
+		height: 30px;
+
+		.editor-header-item {
+			height: 100%;
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			margin: 0px 8px 0px 8px;
+		}
 	}
 }
