--- a/src/components/panes/editor/ResultViewer/styles.less
+++ b/src/components/panes/editor/ResultViewer/styles.less
@@ -15,14 +15,16 @@
 	flex-grow: 1;
 	min-height: 0;
 
-	.header {
+	@result-viewer-header-height: 40px;
+
+	.result-viewer-header {
 		display: flex;
 		gap: 4px;
 		align-self: end;
 		align-items: center;
 		justify-content: flex-end;
 		flex-grow: 1;
-		min-height: 40px;
+		min-height: @result-viewer-header-height;
 		padding: 2px;
 		width: 40%;
 
@@ -37,7 +39,6 @@
 		display: flex;
 		min-height: 0;
 		width: 100%;
-		height: calc(100% - 40px);
 		padding: 4px;
 	}
 
@@ -50,7 +51,7 @@
 		@tree-view-header-height: 30px;
 
 		.header {
-			height: @tree-view-header-height;
+			min-height: @tree-view-header-height;
 			gap: 10px;
 		}
 
@@ -60,7 +61,9 @@
 			display: flex;
 			flex-direction: column;
 			flex-grow: 0;
-			min-height: calc(100% - @tree-view-header-height);
+			height: calc(
+				100% - (@tree-view-header-height + @result-viewer-header-height)
+			);
 
 			.document-header-buttons {
 				display: flex;
