--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -152,13 +152,14 @@
 		flex-grow: 1;
 		width: 100%;
 		height: 30px;
+		padding: 6px 0px;
 
 		.editor-header-item {
 			height: 100%;
 			display: flex;
 			justify-content: space-evenly;
 			align-items: center;
-			margin: 0px 8px 0px 8px;
+			padding: 0px 4px;
 		}
 	}
 }
