--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -35,7 +35,7 @@
 		}
 	}
 
-	.container {
+	.result-viewer-container {
 		display: flex;
 		min-height: calc(100% - @result-viewer-header-height);
 		width: 100%;
@@ -101,10 +101,6 @@
 		.context-menu {
 			display: flex;
 			flex-grow: 1;
-		}
-
-		.new-field-row {
-			display: flex;
 		}
 
 		.content-row {
