--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -1,32 +1,48 @@
 // Color definitions
 
-@primary-tint-1: #dce5f5;
-@primary-tint-2: #bcccec;
-@primary-tint-3: #8a9dc7;
-@primary-tint-4: #58688f;
-@primary-tint-5: #18203b;
-@primary-tint-6: #111731;
-@primary-tint-7: #0a1028;
-@primary-tint-8: #060a21;
+// old
+// @primary-tint-1: #dce5f5;
+// @primary-tint-2: #bcccec;
+// @primary-tint-3: #8a9dc7;
+// @primary-tint-4: #58688f;
+// @primary-tint-5: #18203b;
+// @primary-tint-6: #111731;
+// @primary-tint-7: #0a1028;
+// @primary-tint-8: #060a21;
+
+@white-tint-1: #e2e6f8;
+@white-tint-2: #d7dcf4;
+
+@primary-tint-1: #455576;
+@primary-tint-2: #324165;
+
+@secondary-tint-1: #222b45;
+@secondary-tint-2: #18203b;
+@secondary-tint-3: #111731;
+@secondary-tint-4: #0a1028;
 
 @success: #16825d;
 @success-tint-1: #199c6e;
-@danger: #d02029;
-@danger-tint-1: #e0212a;
+@danger: #b71e47;
+@danger-tint-1: #db2c4a;
 
 // Attribute / Property definitions
 
-@text-color: @primary-tint-1;
-@subtext-color: @primary-tint-2;
+@text-color: @white-tint-1;
+@subtext-color: @white-tint-2;
 
-@container-bg-color: @primary-tint-7;
-@container-fg-color: @primary-tint-6;
-@container-fg-color-bright: @primary-tint-5;
+@container-bg-color: @secondary-tint-3;
+@container-fg-color: @secondary-tint-2;
+@container-fg-color-bright: @secondary-tint-1;
 
-@outline-color: @primary-tint-8;
+@button-color-primary: @primary-tint-1;
+@button-color-secondary: @primary-tint-2;
+@button-color-danger: @danger;
+
+@outline-color: @secondary-tint-4;
 @shadow-color: black;
 @box-shadow: 0px 3px 4px @shadow-color;
 @border-radius: 5px;
 
 @scrollbar-bg-color: @container-fg-color;
-@scrollbar-thumb-color: @primary-tint-4;
+@scrollbar-thumb-color: @primary-tint-2;
