--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -114,6 +114,13 @@
 
 			min-height: 34px;
 
+			.key-delete {
+				height: 34px;
+				display: flex;
+				align-items: center;
+				padding: 4px 8px;
+			}
+
 			.button-container {
 				display: flex;
 			}
