--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -151,8 +151,11 @@
 		display: flex;
 		flex-grow: 1;
 		width: 100%;
-		height: 30px;
-		padding: 6px 0px;
+
+		// subtract this from .shell height
+		height: 38px;
+
+		padding: 6px;
 
 		.editor-header-item {
 			height: 100%;
