--- a/src/components/shell/styles.less
+++ b/src/components/shell/styles.less
@@ -1,5 +1,13 @@
+@import "../../common/styles/variables.less";
+
 .shell {
 	height: calc(100% - 38px);
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	div {
+		border-radius: @border-radius !important;
+	}
 }
 
 .export-options {
