feat(Editor): Random design changes

--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -24,8 +24,8 @@
 		align-items: center;
 		justify-content: flex-end;
 		min-height: @result-viewer-header-height;
-		padding: 14px;
-		width: 40%;
+		padding: 4px 14px;
+		width: 100%;
 
 		.header-item {
 			input {
