--- a/src/index.less
+++ b/src/index.less
@@ -56,3 +56,11 @@ pre {
 	border: 1px solid #777;
 	background: transparent repeat 0 0;
 }
+
+.resize-handle {
+	&:hover,
+	&:active {
+		background-color: @container-fg-color-bright !important;
+	}
+	height: 4px !important;
+}
