feat(Dialog): Design changes. feat(TreeViewer): Review changes dialog styling

--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -30,6 +30,7 @@
 
 @text-color: @white-tint-1;
 @subtext-color: @white-tint-2;
+@link-color: @primary-tint-1;
 
 @container-bg-color: @secondary-tint-3;
 @container-fg-color: @secondary-tint-2;
@@ -41,8 +42,8 @@
 
 @outline-color: @secondary-tint-4;
 @shadow-color: black;
-@box-shadow: 0px 3px 4px @shadow-color;
+@box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 @border-radius: 5px;
 
-@scrollbar-bg-color: @container-fg-color;
+@scrollbar-bg-color: transparent;
 @scrollbar-thumb-color: @primary-tint-2;
