--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -1,11 +1,30 @@
 @import "../../../../common/styles/variables.less";
 
 .updates-list {
-	overflow: auto;
-	max-height: 250px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+
+	.help-text {
+		// text-align: center;
+	}
 
 	.item {
-		margin-top: 8px;
+		border-radius: @border-radius;
+		// background-color: @container-fg-color;
+	}
+
+	code {
+		border-radius: @border-radius;
+		background-color: @container-fg-color-bright;
+		color: @text-color;
+
+		padding: 4px;
+
+		&.multi-line {
+			display: block;
+			white-space: pre-wrap;
+		}
 	}
 }
 
