--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -251,8 +251,9 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		flex-grow: 0;
-		min-height: 0;
-		white-space: pre-wrap;
+		padding-left: 8px;
+		div {
+			border-radius: @border-radius !important;
+		}
 	}
 }
