feat: Changes in Titlebar, Shell and Sidebar * feat(Titlebar): Draggable area * feat(Shell): Removed faulty monaco keybindings * feat(Sidebar): List connections event listener

--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -29,6 +29,14 @@
 		flex-direction: row;
 	}
 
+	.header-draggable-area {
+		display: flex;
+		flex-grow: 1;
+		width: 100%;
+		height: 100%;
+		-webkit-app-region: drag;
+	}
+
 	.header-item {
 		-webkit-app-region: no-drag;
 		padding: 4px;
