feat(css): Switched to rem for font size

--- a/src/common/components/Dialog.less
+++ b/src/common/components/Dialog.less
@@ -2,7 +2,7 @@
 
 .modal {
 	a {
-		margin: 0px 4px;
+		gap: 4px;
 		color: @link-color !important;
 		&:hover {
 			color: @text-color !important;
@@ -21,7 +21,7 @@
 	}
 
 	.title {
-		font-size: large;
+		font-size: @medium-font-size;
 		color: @text-color;
 	}
 
