--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -10,6 +10,11 @@
 // @primary-tint-7: #0a1028;
 // @primary-tint-8: #060a21;
 
+@small-font-size: 0.9rem;
+@medium-font-size: 1rem;
+@large-font-size: 1.1rem;
+@massive-font-size: 2rem;
+
 @white-tint-1: #e2e6f8;
 @white-tint-2: #d7dcf4;
 
