--- a/src/components/connection-controller/styles.less
+++ b/src/components/connection-controller/styles.less
@@ -60,7 +60,7 @@
 }
 
 .Header {
-	font-size: 20px;
+	font-size: @large-font-size;
 }
 
 .CompactCard {
@@ -77,7 +77,7 @@
 }
 
 .CellInfoTitle {
-	font-size: 13px;
+	font-size: @small-font-size;
 }
 
 .CellInfoTitleContent {
