--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -36,7 +36,7 @@
 		justify-content: center;
 		gap: 10px;
 		padding: 30px;
-		font-size: 16px;
+		font-size: @large-font-size;
 		font-weight: 400;
 		text-align: center;
 	}
@@ -107,7 +107,7 @@
 
 	.button-advanced {
 		padding: 20px 20px;
-		font-size: 16px;
+		font-size: @large-font-size;
 		font-weight: 400;
 		text-align: center;
 	}
