--- a/src/index.less
+++ b/src/index.less
@@ -2,6 +2,11 @@
 
 @import "./common/styles/variables.less";
 
+:root {
+	font-weight: 500;
+	font-size: max(14px, 0.8vw);
+}
+
 * {
 	code {
 		font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -64,7 +69,7 @@ pre {
 	margin: revert;
 	overflow: auto;
 	overflow-y: hidden;
-	font-size: 12px;
+	font-size: @medium-font-size;
 	line-height: 20px;
 	border: 1px solid #777;
 	background: transparent repeat 0 0;
