--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -6,7 +6,7 @@
 
 .button-icon-wrapper {
 	display: flex !important;
-	padding: 3px;
+	padding: 4px;
 }
 
 .button-primary {
@@ -53,13 +53,13 @@
 }
 
 .button-text-size-small {
-	font-size: 12px;
+	font-size: @small-font-size;
 }
 
 .button-text-size-medium {
-	font-size: 14px;
+	font-size: @medium-font-size;
 }
 
 .button-text-size-large {
-	font-size: 16px;
+	font-size: @large-font-size;
 }
