--- a/src/components/browser/styles.less
+++ b/src/components/browser/styles.less
@@ -32,7 +32,7 @@
 		}
 
 		.tab-item {
-			margin-right: 4px;
+			gap: 4px;
 			border-radius: @border-radius;
 			border-bottom-left-radius: 0;
 			border-bottom-right-radius: 0;
