--- a/src/components/onboarding/styles.less
+++ b/src/components/onboarding/styles.less
@@ -1,9 +1,11 @@
 @import "../../common/styles/variables.less";
 
 .empty-state {
-	display: "flex";
-	justify-content: "center";
-	align-items: "center";
-	height: "100%";
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
 	color: @text-color;
+	background-color: @container-bg-color;
 }
