feat(Button): Button tooltip styled

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -1,5 +1,11 @@
 @import "../styles/variables.less";
 
+.bp4-tooltip2 .bp4-popover2-content {
+	background: @container-fg-color-bright;
+	color: @text-color;
+	border-radius: @border-radius;
+}
+
 .button-base {
 	border-radius: @border-radius;
 }
