feat(layout): Added some border

--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -23,6 +23,7 @@
 	height: 35px;
 	background: @container-bg-color;
 	color: @text-color;
+	border-bottom: 1px solid @outline-color;
 
 	.header-container {
 		display: flex;
