--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -1,14 +1,13 @@
 @import "../../common/styles/variables.less";
 
 .sidebar {
-	width: 48px;
-	min-width: 48px;
-	max-width: 48px;
+	display: flex;
+	flex-direction: column;
+	min-width: 3.5rem;
 	height: 100%;
+
 	background: @container-bg-color;
-	box-shadow: @box-shadow;
-	display: "flex";
-	flex-direction: "column";
+	border-right: 1px solid @outline-color;
 
 	.item {
 		display: flex;
