--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,3 @@
-@import "antd/dist/antd.less";
-
 @import "./common/styles/variables.less";
 
 :root {
@@ -47,6 +45,8 @@
 html {
 	overflow: hidden;
 	display: flex;
+	height: 100%;
+	width: 100%;
 }
 
 body {
